# Claude-Code-Usage-Monitor

./: .gitignore  App.xaml  App.xaml.cs  ClaudeCodeUsageMonitor.csproj  README.md  app.manifest  installer-native.iss  installer.iss
Api/: UsagePoller.cs
Credentials/: CredentialsReader.cs
Models/: UsageSnapshot.cs
Settings/: AppSettings.cs  StartupManager.cs
Tray/: TrayController.cs  TrayIconRenderer.cs
Ui/: FullscreenDetector.cs  NativeMethods.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs  TaskbarPositioner.cs  Theme.cs
native/: Cargo.toml  build.rs
native/src/: main.rs
