[package]
name = "ccum"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "ClaudeUsageMonitorNative"
path = "src/main.rs"

[dependencies]
ureq = "2"
serde_json = "1"
winreg = "0.52"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
